# observable-test1

./: README.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml
src/: index.md  manufacturing-and-income.md
src/data/: core_periphery.csv  out.csv  regions.csv
